--- a/클론코딩3/css/style.css
+++ b/클론코딩3/css/style.css
@@ -19,6 +19,11 @@ a {
   color: black;
 }
 
+form {
+  margin: 0;
+  padding: 0;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -38,6 +43,14 @@ body {
 .layout {
   max-width: 1240px;
   margin: 0 auto;
+}
+
+.layout-relative {
+  max-width: 1240px;
+  margin: 0 auto;
+  position: relative;
+  width: 100%;
+  text-align: left;
 }
 
 .container-fluid {
@@ -132,6 +145,10 @@ header * {
   z-index: 1;
 }
 
+span {
+  line-height: 1.6;
+}
+
 body.on {
   content: '';
   z-index: 0;
@@ -220,6 +237,10 @@ body.on {
   margin: 16px;
 }
 
+.logo-gnb #logo .logo {
+  transform: translateY(-30px);
+}
+
 .logo-gnb .utile-wrap {
   height: 92px;
   float: right;
@@ -261,7 +282,6 @@ body.on {
   display: block;
   float: none;
   height: 100%;
-  padding: 0 90px;
   text-align: center;
 }
 
@@ -274,6 +294,11 @@ body.on {
   vertical-align: top;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li:hover > a > span {
+  color: #345aa0;
+  transition: .2s;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li > a {
   position: relative;
   display: block;
@@ -281,9 +306,30 @@ body.on {
   text-align: center;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li > a:after {
+  display: block;
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  content: '';
+  width: 0;
+  height: 4px;
+  background: #345aa0;
+  transition: .3s;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li > a.current:after {
+  left: 0;
+  width: 100%;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li > a.current + .item {
   opacity: 1;
   display: block;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li > a.current span:before {
+  opacity: 1;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li > a > span {
@@ -294,6 +340,19 @@ body.on {
   font-weight: 700;
   color: #282828;
   vertical-align: middle;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li > a > span:before {
+  display: block;
+  opacity: 0;
+  position: absolute;
+  left: 50%;
+  bottom: 9px;
+  content: '';
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-bottom: 6px solid #345aa0;
+  transition: .3s;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item {
@@ -307,6 +366,10 @@ body.on {
   margin: 0;
   padding-left: 270px;
   text-align: left;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item.second {
+  padding-left: 0;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .gnb-title {
@@ -329,6 +392,17 @@ body.on {
   line-height: 1.3;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .gnb-title > strong:after {
+  display: block;
+  position: absolute;
+  left: 0;
+  bottom: -24px;
+  content: '';
+  width: 36px;
+  height: 1px;
+  background: #282828;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .gnb-title > p {
   display: inline-block;
   position: relative;
@@ -339,6 +413,7 @@ body.on {
   font-size: 14px;
   color: #767676;
   line-height: 1.4;
+  font-weight: 700;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul {
@@ -351,6 +426,137 @@ body.on {
   text-align: left;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 {
+  padding: 43px 0 0;
+  text-align: center;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li {
+  display: inline-block;
+  float: none;
+  width: 150px;
+  position: static;
+  border-right: 1px solid #e9e9e9;
+  text-align: center;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(0) > a:before {
+  background-position: 0px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(0):hover > a:before {
+  background-position: 0px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(1) > a:before {
+  background-position: -84px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(1):hover > a:before {
+  background-position: -84px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(2) > a:before {
+  background-position: -168px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(2):hover > a:before {
+  background-position: -168px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(3) > a:before {
+  background-position: -252px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(3):hover > a:before {
+  background-position: -252px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(4) > a:before {
+  background-position: -336px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(4):hover > a:before {
+  background-position: -336px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(5) > a:before {
+  background-position: -420px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(5):hover > a:before {
+  background-position: -420px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(6) > a:before {
+  background-position: -504px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(6):hover > a:before {
+  background-position: -504px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(7) > a:before {
+  background-position: -588px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(7):hover > a:before {
+  background-position: -588px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(8) > a:before {
+  background-position: -672px 0;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li:nth-child(8):hover > a:before {
+  background-position: -672px -84px;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li .a2:before {
+  background: url("../img/gnb_ico_ir.png");
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a {
+  display: block;
+  position: relative;
+  left: auto;
+  top: auto;
+  width: 100%;
+  padding: 0;
+  border-bottom: none;
+  background: transparent;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a span {
+  font-weight: 700;
+  color: #767676;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a:hover span {
+  color: #345aa0;
+  transition: .2s;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a:hover:before {
+  border: 1px solid #345aa0;
+  border-radius: 50%;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul.depth2-2 li a:before {
+  display: block;
+  opacity: 1;
+  position: static;
+  width: 84px;
+  height: 84px;
+  margin: 0 auto 15px;
+  border: 1px solid #e9e9e9;
+  border-radius: 50%;
+  background: url("../img/gnb_ico_ir2.png");
+  top: 50%;
+  right: -8px;
+  content: '';
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 {
   display: block;
   float: left;
@@ -359,6 +565,7 @@ body.on {
   padding: 0;
   text-align: left;
   min-height: 50px;
+  list-style: circle;
 }
 
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 > a {
@@ -375,6 +582,11 @@ body.on {
   vertical-align: top;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 > a:hover {
+  background: #345aa0;
+  transition: .2s;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 > a > span {
   display: inline-block;
   color: #fff;
@@ -387,7 +599,7 @@ body.on {
   float: right;
   width: calc( 100% - 210px);
   min-height: 56px;
-  padding: 10px 0 10px 25px;
+  padding: 10px 0 10px 10px;
   border-bottom: 1px dashed #c4c6c8;
 }
 
@@ -397,6 +609,16 @@ body.on {
   margin: 3px 13px 3px 0;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li:hover a span {
+  color: #345aa0;
+  text-decoration: underline;
+  transition: .2s;
+}
+
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li:hover a:before {
+  background: #345aa0;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li > a {
   display: block;
   position: relative;
@@ -404,10 +626,22 @@ body.on {
   padding-left: 10px;
 }
 
+#gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li > a:before {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 11px;
+  content: '';
+  width: 3px;
+  height: 3px;
+  background: #9f9fa0;
+}
+
 #gnb-layout #gnb .gnb-wrap .depth1-ul > li .item .depth2-ul li.n1_1 .depth3-ul > li > a > span {
   display: inline-block;
   font-size: 15px;
   color: #7b7b7b;
+  font-weight: 700;
 }
 
 @keyframes dropdown {
@@ -417,4 +651,285 @@ body.on {
   to {
     top: 0;
   }
+}
+
+/* swiper button custom area */
+.swiper-button-next:after, .swiper-button-prev:after {
+  display: none;
+}
+
+.swiper-button-prev {
+  height: 20px;
+  width: 20px;
+  background: red;
+}
+
+.swiper-button-next {
+  height: 20px;
+  width: 20px;
+  background: blue;
+}
+
+#body-layout {
+  width: 100%;
+  display: block;
+}
+
+#body-layout .main-wrap {
+  overflow: hidden;
+  background: url("../img/bg_now.png") no-repeat center bottom;
+  background-size: 100% auto;
+  width: 100%;
+}
+
+#body-layout .main-wrap .common-info-box {
+  position: relative;
+  padding: 25px 0;
+  margin-bottom: 45px;
+  background: #eff3f6;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  z-index: 10;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .title-box {
+  display: inline-block;
+  vertical-align: middle;
+  width: 120px;
+  height: 120px;
+  padding: 20px 0;
+  margin-right: 20px;
+  border: 1px solid #e0e0e0;
+  background: #fff;
+  text-align: center;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .title-box .title {
+  display: block;
+  margin: 0 auto 10px;
+  width: 93px;
+  height: 57px;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .title-box .title a {
+  font-size: 0;
+  display: block;
+  width: 100%;
+  height: 100%;
+  background: url("../img/taegeukgi.png");
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .title-box .date {
+  display: inline-block;
+  vertical-align: middle;
+  font-size: 13px;
+  color: #828282;
+  font-weight: 600;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .data-box {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .data-box .dust-box strong {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 3px;
+  font-size: 14px;
+  color: #282828;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .data-box .dust-box .dust {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 3px;
+  font-size: 14px;
+  color: #282828;
+  font-weight: 600;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .weather-box .data-box .dust-box .status.em1 {
+  color: #0d75b4;
+  font-size: 14px;
+  font-weight: 600;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box {
+  float: right;
+  display: inline-block;
+  vertical-align: middle;
+  padding: 20px;
+  position: relative;
+  z-index: 10;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .title-box {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 5px 0 0 36px;
+  background: url("../img/ico_population.svg") left center no-repeat;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .title-box a {
+  display: block;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .title-box strong {
+  font-size: 17px;
+  font-weight: 600;
+  color: #282828;
+  line-height: 1.2;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .title-box span {
+  font-size: 14px;
+  color: #777;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list li {
+  display: inline-block;
+  vertical-align: middle;
+  margin-left: 20px;
+  text-align: center;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list li:before {
+  content: '';
+  display: block;
+  height: 40px;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list li:first-child:before {
+  background: url("../img/ico_junggu.png") center no-repeat;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list li:last-child:before {
+  background: url("../img/ico_daejeon.png") center no-repeat;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list li a {
+  display: block;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .population-box .data-list li a strong b {
+  display: block;
+  font-weight: 600;
+  line-height: 1;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  z-index: 9;
+  width: 100%;
+  padding: 0 400px;
+  transform: translate(-6%, -50%);
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box .align-box {
+  position: relative;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box .align-box input {
+  width: calc(100% - 44px);
+  height: 59px;
+  padding: 0 45px 0 25px;
+  border: 1px solid #e8e8e8;
+  border-radius: 29.5px;
+  background: #fff;
+  font-size: 16px;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box .align-box .btn-submit {
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 59px;
+  height: 59px;
+  border-radius: 100%;
+  background: #345aa0 url("../img/ico_search.svg") center no-repeat;
+  text-indent: -9999px;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box .align-box fieldset {
+  margin: 0;
+  padding: 0;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box .align-box fieldset legend {
+  overflow: hidden;
+  position: relative;
+  width: 0;
+  height: 0;
+  margin: 0;
+  padding: 0;
+  line-height: 0;
+}
+
+#body-layout .main-wrap .common-info-box .layout-relative .search-box .align-box fieldset legend .skip {
+  top: 0;
+  position: absolute;
+  height: 0;
+  font-size: 0;
+}
+
+#keyword {
+  display: block;
+  position: relative;
+  overflow: hidden;
+  min-width: 320px;
+  padding: 0 75px 0 85px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+#keyword em {
+  position: absolute;
+  left: 18px;
+  color: #345aa0;
+  font-weight: bold;
+  font-size: 15px;
+  background: #eff3f6;
+  z-index: 10;
+}
+
+#keyword .input-under-swiper {
+  overflow: hidden;
+  position: relative;
+  height: 24px;
+  width: 100%;
+}
+
+#keyword .input-under-swiper .swiper-wrapper {
+  width: 100%;
+}
+
+#keyword .input-under-swiper .swiper-wrapper .slide-inner-box {
+  padding: 0 2px;
+  position: relative;
+}
+
+#keyword .input-under-swiper .swiper-wrapper .slide-inner-box a {
+  font-size: 15px;
+}
+
+#keyword .input-under-swiper .swiper-wrapper .slide-inner-box a:hover {
+  border-bottom: 1px solid black;
+}
+
+#keyword .swiper-button-wrap1 {
+  position: absolute;
+  right: 23px;
+  top: 2px;
 }
