--- a/클론코딩3/scss/layout.scss
+++ b/클론코딩3/scss/layout.scss
@@ -5,9 +5,8 @@ body {
   font-family: 'Nanum Gothic', sans-serif;
 }
 
-header * {
-  z-index: 1;
-}
+header * { z-index: 1; }
+span { line-height: 1.6; }
 
 body.on {
   content: '';
@@ -89,6 +88,9 @@ body.on {
   z-index: 11;
   float: left;
   margin: 16px;
+  .logo {
+    transform: translateY( -30px );
+  }
   }
   .utile-wrap {
     height: 92px;
@@ -107,11 +109,7 @@ body.on {
   min-height: 92px;
   border-top: 1px solid #eee;
   z-index: 10;
-  &.open {
-    // min-height: 700px;
-    transition: .5s;
-    // box-shadow : rgba(0,0,0,0.6) 0 0 0 9999px;
-  }
+  &.open { transition: .5s; }
   #gnb {
     position: absolute;
     top: 0px;
@@ -127,7 +125,7 @@ body.on {
         display: block;
         float: none;
         height: 100%;
-        padding: 0 90px;
+        // padding: 0 90px;
         text-align: center;
         & > li {
           display: inline-block;
@@ -136,14 +134,36 @@ body.on {
           height: 100%;
           margin: 0;
           vertical-align: top;
+          &:hover > a > span {
+            color: $gnbHoverColor;
+            transition: .2s;
+          }
           & > a {
             position: relative;
             display: block;
             height: 100%;
             text-align: center;
+            &:after {
+              display: block;
+              position: absolute;
+              left: 50%;
+              bottom: 0;
+              content: '';
+              width: 0;
+              height: 4px;
+              background: $gnbHoverColor;
+              transition: .3s;
+            }
+            &.current:after {
+              left: 0;
+              width: 100%;
+            }
             &.current + .item {
               opacity: 1;
               display: block;
+            }
+            &.current span:before {
+              opacity: 1;
             }
             & > span {
               display: inline-block;
@@ -153,6 +173,18 @@ body.on {
               font-weight: 700;
               color: #282828;
               vertical-align: middle;
+              &:before {
+                display: block;
+                opacity: 0;
+                position: absolute;
+                left: 50%;
+                bottom: 9px;
+                content: '';
+                border-left: 6px solid transparent;
+                border-right: 6px solid transparent;
+                border-bottom: 6px solid $gnbHoverColor;
+                transition: .3s;
+              }
             }
           }
           .item {
@@ -166,6 +198,9 @@ body.on {
             margin: 0;
             padding-left: 270px;
             text-align: left;
+            &.second {
+              padding-left: 0;
+            }
             .gnb-title {
               position: absolute;
               top: 0;
@@ -182,6 +217,16 @@ body.on {
                 color: #282828;
                 font-weight: 700;
                 line-height: 1.3;
+                &:after {
+                  display: block;
+                  position: absolute;
+                  left: 0;
+                  bottom: -24px;
+                  content: '';
+                  width: 36px;
+                  height: 1px;
+                  background: #282828;
+                }
               }
               & > p {
                 display: inline-block;
@@ -193,6 +238,7 @@ body.on {
                 font-size: 14px;
                 color: #767676;
                 line-height: 1.4;
+                font-weight: 700;
               }
             }
             .depth2-ul {
@@ -203,6 +249,64 @@ body.on {
               min-height: 243px;
               width: 100%;
               text-align: left;
+              &.depth2-2 {
+                padding: 43px 0 0;
+                text-align: center;
+                li {
+                  display: inline-block;
+                  float: none;
+                  width: 150px;
+                  position: static;
+                  border-right: 1px solid #e9e9e9;
+                  text-align: center;
+                  // 상단 GNB li 아이콘메뉴 영역 포문처리
+                  @for $i from 0 to 9{
+                    &:nth-child(#{$i}) > a:before { background-position: ($i*-84px) 0};
+                    &:nth-child(#{$i}):hover > a:before { background-position: ($i*-84px) -84px};
+                  }
+                  .a2 {
+                    &:before {
+                      background: url("../img/gnb_ico_ir.png");
+                    }
+                  }
+                  a {
+                    display: block;
+                    position: relative;
+                    left: auto;
+                    top: auto;
+                    width: 100%;
+                    padding: 0;
+                    border-bottom: none;
+                    background: transparent;
+                    span {
+                      font-weight: 700;
+                      color: #767676;
+                    }
+                    &:hover span {
+                      color: $gnbHoverColor;
+                      transition: .2s;
+                    }
+                    &:hover:before {
+                      border: 1px solid $gnbHoverColor;
+                      border-radius: 50%;
+                    }
+                    &:before {
+                      display: block;
+                      opacity: 1;
+                      position: static;
+                      width: 84px;
+                      height: 84px;
+                      margin: 0 auto 15px;
+                      border: 1px solid #e9e9e9;
+                      border-radius: 50%;
+                      background: url("../img/gnb_ico_ir2.png");
+                      top: 50%;
+                      right: -8px;
+                      content: '';
+                    }
+                  }
+                }
+              }
               li.n1_1 {
                 display: block;
                 float: left;
@@ -211,6 +315,7 @@ body.on {
                 padding: 0;
                 text-align: left;
                 min-height: 50px;
+                list-style: circle;
                 & > a {
                   display: block;
                   position: absolute;
@@ -223,7 +328,10 @@ body.on {
                   border-bottom: 1px solid #5d6779;
                   background: #414c62;
                   vertical-align: top;
-                  // transition:
+                  &:hover {
+                    background: $gnbHoverColor;
+                    transition: .2s;
+                  }
                   & > span {
                     display: inline-block;
                     color: #fff;
@@ -236,21 +344,40 @@ body.on {
                   float: right;
                   width: calc( 100% - 210px );
                   min-height: 56px;
-                  padding: 10px 0 10px 25px;
+                  padding: 10px 0 10px 10px;
                   border-bottom: 1px dashed #c4c6c8;
                   & > li {
                     display: inline-block;
                     position: relative;
                     margin: 3px 13px 3px 0;
+                    &:hover a span {
+                      color: $gnbHoverColor;
+                      text-decoration: underline;
+                      transition: .2s;
+                    }
+                    &:hover a:before {
+                      background: $gnbHoverColor;
+                    }
                     & > a {
                       display: block;
                       position: relative;
                       width: 100%;
                       padding-left: 10px;
+                      &:before {
+                        display: block;
+                        position: absolute;
+                        left: 0;
+                        top: 11px;
+                        content: '';
+                        width: 3px;
+                        height: 3px;
+                        background: #9f9fa0;
+                      }
                       & > span {
                         display: inline-block;
                         font-size: 15px;
                         color: #7b7b7b;
+                        font-weight: 700;
                       }
                     }
                   }
